MDEV-29706 : SIGSEGV in wsrep_TOI_begin on non-Galera builds

Do not allow setting wsrep_on=ON if no provider is set.